--- a/payee/src/components/PayeeCard/style.css
+++ b/payee/src/components/PayeeCard/style.css
@@ -1,4 +1,4 @@
-.card {
+.payeeCard {
   background: #fff;
   border-radius: 2px;
   height: 325px;
@@ -9,31 +9,31 @@
   text-align: left;
 }
 
-.card > .img-container {
+.payeeCard > .img-container {
   height: 60%;
   overflow: hidden;
   text-align: center;
   background:#6CADDC;
 }
-.card > .img-container > img {
+.payeeCard > .img-container > img {
   width: 60%
 }
 
-.card > .content {
+.payeeCard > .content {
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 15px;
 }
 
-.card > .content > ul {
+.payeeCard > .content > ul {
   list-style-type: none;
 }
 
-.card > .content > ul > li {
+.payeeCard > .content > ul > li {
   margin-top: 18px;
 }
 
-.card > .remove {
+.payeeCard > .remove {
   color: #ff1744;
   font-size: 48px;
   position: absolute;
@@ -42,6 +42,6 @@
   cursor: pointer;
 }
 
-.card > .remove:hover {
+.payeeCard > .remove:hover {
   color: #d50000;
 }
