Added some basic styling. Fixed up and centered the card content and pagination bar. All that is left is to set the information so it can be read in a clear and concise manner.

--- a/payee/src/components/Wrapper/style.css
+++ b/payee/src/components/Wrapper/style.css
@@ -1,4 +1,4 @@
-.wrapper {
+.container-fluid {
   padding-top: 50px;
   background: white;
   height: 100%;
@@ -8,4 +8,8 @@
   justify-content: space-around;
   align-content: flex-start;
   overflow: auto;
+}
+
+.row{
+  width: 100%;
 }
