--- a/payee/src/components/PayeeCard/style.css
+++ b/payee/src/components/PayeeCard/style.css
@@ -1,53 +1,48 @@
+.address {
+  font-size: large;
+}
+
+.attention {
+  font-size: large;
+}
+
+.attention-date {
+  font-size: large;
+}
+
+.companyContact {
+  margin-top: 3%;
+}
+
 .payeeName {
   text-align: center;
   margin-top: 3%;
-  
-}
-
-.phoneInfo {
-  text-align: center;
-  margin-top: 3%;
-}
-
-address {
-  text-align: center;
-  margin-top: 3%;
+  border-bottom: solid;
+  font-size: xx-large; 
 }
 
 .payeeCard {
   background: #fff;
   border-radius: 2px;
   /* height: 325px; */
-  margin: 1rem;
+  margin: auto;
+  margin-top: 0;
   position: relative;
-  width: 40%;
+  width: 35%;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
+  padding: 0;
 }
 
 .payeeCard > .content {
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 15px;
+  border-bottom: solid; 
 }
 
-.payeeCard > .content > ul {
-  list-style-type: none;
-}
-
-.payeeCard > .content > ul > li {
-  margin-top: 8px;
-}
-
-.payeeCard > .remove {
-  color: #ff1744;
-  font-size: 48px;
-  position: absolute;
-  top: -20px;
-  right: 5px;
-  cursor: pointer;
-}
-
-.payeeCard > .remove:hover {
-  color: #d50000;
+.phoneInfo {
+  text-align: center;
+  margin-top: 3%;
+  margin-bottom: 2%;
 }
