Added some of the final styling. Working on mobile responsiveness and adding comments to the code

--- a/payee/src/index.css
+++ b/payee/src/index.css
@@ -35,3 +35,9 @@ code {
   border: 1px solid #0099FF;
 }
 
+.remittance {
+  text-align: center;
+  font-size: xx-large;
+  text-decoration: underline;
+}
+
