--- a/payee/src/components/PayeeCard/style.css
+++ b/payee/src/components/PayeeCard/style.css
@@ -19,6 +19,7 @@
   margin-top: 3%;
   border-bottom: solid;
   font-size: xx-large; 
+  font-weight: bold;
 }
 
 .payeeCard {
@@ -45,4 +46,5 @@
   text-align: center;
   margin-top: 3%;
   margin-bottom: 2%;
+  font-size: large;
 }
