--- a/payee/src/components/Wrapper/style.css
+++ b/payee/src/components/Wrapper/style.css
@@ -1,6 +1,6 @@
 .container-fluid {
   padding-top: 50px;
-  background: white;
+  background: #ECEFF1;
   height: 100%;
   display: flex;
   flex-flow: row wrap;
